fix: mobile landing page not responsive

--- a/packages/nyris-webapp/src/components/appMobile.scss
+++ b/packages/nyris-webapp/src/components/appMobile.scss
@@ -20,12 +20,10 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
-    // height: calc(100vh);
+    height: 100vh;
     background-color: #fafafa;
     // min-height: -webkit-fill-available;
-    height: calc(var(--vh, 1vh) * 100);
     .box-header-mobile-main {
       // min-height: 60px;
       border-bottom: 1px solid #e9e9ec;
